--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,15 @@ body {
 }
 
 h1 {
-  margin-top: 0;
+  font-size: 100px;
+  margin-top: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  line-height: 1;
 }
 
 h2 {
+  font-weight: bold;
+  font-size: 40px;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -24,22 +28,78 @@ h3 {
 }
 
 .middle-container{
-  background-color: #BB8082;
+  background: rgb(243,145,137);
+  background: linear-gradient(180deg, rgba(243,145,137,1) 0%, rgba(187,128,130,1) 100%);
+  /*background-color: #BB8082;*/
+}
+
+.contact-me{
+  background: rgb(187,128,130);
+background: linear-gradient(180deg, rgba(187,128,130,1) 0%, rgba(53,92,125,1) 100%);
+  /*background-color: #355C7D;*/
 }
 
 .bottom-container{
-  background-color: #6E7582;
+  padding: 20px;
+  background: rgb(45,47,50);
+  background: linear-gradient(0deg, rgba(45,47,50,1) 0%, rgba(53,92,125,1) 100%);
+  /*background-color: #6E7582;*/
 }
 
 .top-cloud {
+  height: 200px;
   position: absolute;
   right: 300px;
-  ;
   top: 50px;
 }
 
 .bottom-cloud {
+  height: 200px;
   position: absolute;
   left: 300px;
   bottom: 300px;
+}
+
+.mountain{
+  height: 250;
+  position: relative;
+  bottom: -10px;
+}
+
+
+.btn {
+  background: #bb8082;
+  background-image: -webkit-linear-gradient(top, #bb8082, #2980b9);
+  background-image: -moz-linear-gradient(top, #bb8082, #2980b9);
+  background-image: -ms-linear-gradient(top, #bb8082, #2980b9);
+  background-image: -o-linear-gradient(top, #bb8082, #2980b9);
+  background-image: linear-gradient(to bottom, #bb8082, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Merriweather;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #bd494f;
+  background-image: -webkit-linear-gradient(top, #bd494f, #3498db);
+  background-image: -moz-linear-gradient(top, #bd494f, #3498db);
+  background-image: -ms-linear-gradient(top, #bd494f, #3498db);
+  background-image: -o-linear-gradient(top, #bd494f, #3498db);
+  background-image: linear-gradient(to bottom, #bd494f, #3498db);
+  text-decoration: none;
+}
+
+.footer-link{
+  text-decoration: none;
+  margin: 10px;;
+  color: white;
+}
+
+.copyright{
+  color: white;
 }
